--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    transition: .5s;
+    transition: .4s;
 }
 
 body {
@@ -18,7 +18,6 @@ header {
     justify-content: center;
     align-items: center;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0, 5), #dad1d1);
-    box-shadow: 0 0 60px #fff;
     padding: 0 10px;
     user-select: none;
 }
@@ -31,7 +30,7 @@ header h1 {
 header nav {
     overflow: hidden;
     position: relative;
-    margin-left: 100px;
+    flex: 1;
 }
 
 header nav ul {
@@ -39,7 +38,6 @@ header nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 500px;
     opacity: 0;
     transition: .5s;
 }
@@ -67,16 +65,6 @@ header nav ul li a {
     letter-spacing: 1.5px;
     text-transform: uppercase;
     opacity: 0;
-}
-
-header nav ul li a.home::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 2px;
-    background: royalblue;
-    left: 0;
-    bottom: 0px;
 }
 
 header #toggle {
@@ -132,6 +120,23 @@ header #toggle.active::before {
     transition: .8s;
 }
 
+header .theme {
+    position: absolute;
+    right: 50px;
+}
+
+header .theme .fa.fa-sun-o {
+    font-size: 17px;
+    color: #ece8e8;
+    cursor: pointer;
+}
+
+header .theme .fa.fa-moon-o {
+    font-size: 17px;
+    color: rgba(0, 0, 0, 0.8);
+    cursor: pointer;
+}
+
 section {
     display: flex;
     justify-content: center;
@@ -142,7 +147,7 @@ section {
     color: rgba(0, 0, 0, 0.04);
 }
 
-.arrow a .fa {
+.arrow .fa {
     position: fixed;
     font-size: 25px;
     font-weight: 500;
@@ -150,6 +155,16 @@ section {
     right: 20px;
     bottom: 20px;
     color: #575858;
+}
+
+.arrow.up .fa {
+    position: fixed;
+    font-size: 25px;
+    font-weight: 500;
+    cursor: pointer;
+    right: 20px;
+    bottom: 20px;
+    color: #dad1d1;
 }
 
 footer {
@@ -182,7 +197,7 @@ footer {
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 6 00px) {
     header nav {
         transform: translateY(350px);
         overflow: visible;
@@ -202,10 +217,50 @@ footer {
         display: none;
     }
     footer {
-        width: 120%;
+        width: 200%;
     }
     section {
         font-size: 80px;
         margin-left: 100px;
     }
+}
+
+
+/* Dark Theme */
+
+body.darkLight header {
+    background-color: #575858;
+}
+
+body.darkLight header h1 {
+    color: #f5f3f3;
+}
+
+body.darkLight header nav ul li a {
+    color: #ececec;
+}
+
+body.darkLight header #toggle::after {
+    box-shadow: 0 6px white;
+    background: white;
+}
+
+body.darkLight header #toggle.active::after {
+    box-shadow: none;
+}
+
+body.darkLight header #toggle::before {
+    background: white;
+}
+
+body.darkLight section {
+    background: #343535;
+}
+
+body.darkLight .arrow .fa {
+    color: #dad1d1;
+}
+
+body.darkLight footer {
+    background: #575858;
 }
