--- a/style.css
+++ b/style.css
@@ -338,6 +338,9 @@ body.darkLight footer {
     body.darkLight #navBar {
         background-color: #858585;
     }
+    section {
+        font-size: 70px;
+    }
 }
 
 
@@ -352,8 +355,9 @@ body.darkLight footer {
     }
     section {
         width: 450px;
+        font-size: 60px;
     }
     header #toggle {
-        right: 20px;
+        right: 23px;
     }
 }
